--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <div class="absolute inset-0 bg-gray-600/80"></div>
 
     <div class="container mx-auto px-6 relative z-10 text-center text-white">
-        <h1 class="text-5xl md:text-7xl lg:text-8xl font-bold mb-4 leading-tight">Creamos comunidades que inspiran bienestar y plusvalía.</h1>
-        <p class="text-lg md:text-xl max-w-3xl mx-auto mb-8">En 2030, CasaMax es el referente en soluciones habitacionales en Costa Rica, combinando diseño, sostenibilidad e innovación para cada etapa de la vida.</p>
+        <h1 class="text-5xl md:text-7xl lg:text-8xl font-bold mb-4 leading-tight">Comunidades vibrantes donde la vida mejora y el valor perdura</h1>
+        <p class="text-lg md:text-xl max-w-3xl mx-auto mb-8">En 2030, CasaMax es el referente en soluciones habitacionales en Costa Rica, combinando diseño, sostenibilidad e innovación para cada etapa de la vida</p>
         <a href="#portfolio" class="btn-primary px-8 py-4 rounded-full text-lg">Descubra su futuro hogar</a>
     </div>
     </section>
@@ -149,7 +149,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
                     <div class="p-8">
                         <h2 class="text-5xl font-bold text-primary-light" data-counter-target="15000">15,000+</h2>
-                        <p class="mt-2 text-lg text-gray-600">Hogares entregados para 2030</p>
+                        <p class="mt-2 text-lg text-gray-600">Hogares entregados al 2030</p>
                     </div>
                     <div class="p-8">
                         <h2 class="text-5xl font-bold text-primary-light" data-counter-target="12">12%+</h2>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="p-8">
                         <h2 class="text-5xl font-bold text-primary-light" data-counter-target="95">95%</h2>
-                        <p class="mt-2 text-lg text-gray-600">Satisfacción de cliente (CX Renovado)</p>
+                        <p class="mt-2 text-lg text-gray-600">Satisfacción de cliente (CX renovado)</p>
                     </div>
                 </div>
                  <div class="text-center mt-12">
@@ -171,7 +171,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl md:text-5xl font-bold">Nuestro Portafolio 2030</h2>
-                    <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Un ecosistema de soluciones habitacionales diseñado para el mercado costarricense del futuro.</p>
+                    <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Un ecosistema de soluciones habitacionales diseñado para el mercado costarricense del futuro</p>
                 </div>
 
                 <div id="portfolio-data" class="space-y-16">
@@ -185,7 +185,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl md:text-5xl font-bold">Nuestra Huella: 2025–2030</h2>
-                    <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Expansión estratégica para capturar oportunidades en las geografías de mayor potencial de Costa Rica.</p>
+                    <p class="mt-4 text-lg text-gray-600 max-w-2xl mx-auto">Expansión estratégica para capturar oportunidades en las geografías de mayor potencial de Costa Rica</p>
                 </div>
                 <div class="flex flex-col lg:flex-row gap-12 items-center">
                     <!-- Interactive Map -->
@@ -297,7 +297,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
                     <h2 class="text-4xl md:text-5xl font-bold">El Salto Estratégico: 2025 vs. 2030</h2>
-                    <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">De una operación tradicional a un líder de mercado ágil, diversificado y digitalizado.</p>
+                    <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">De una operación tradicional a un líder de mercado ágil, diversificado y digitalizado</p>
                 </div>
                 <div id="comparison-container" class="space-y-8">
                     <!-- Comparison blocks injected by JS -->
@@ -309,7 +309,7 @@
         <section id="advisor" class="py-20 bg-primary-dark text-white section-fade-in">
             <div class="container mx-auto px-6 text-center">
                  <h2 class="text-4xl md:text-5xl font-bold">Encuentre su asesor ideal</h2>
-                 <p class="mt-4 text-lg text-gray-300 max-w-2xl mx-auto">Nuestro equipo de expertos está listo para guiarlo en cada paso hacia su nuevo hogar.</p>
+                 <p class="mt-4 text-lg text-gray-300 max-w-2xl mx-auto">Nuestro equipo de expertos está listo para guiarlo en cada paso hacia su nuevo hogar</p>
                  <div class="mt-10 max-w-4xl mx-auto bg-white/10 p-8 rounded-2xl">
                      <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
                          <div>
@@ -406,7 +406,7 @@
             portfolio: {
                 core: {
                     title: "Motor Core: Eficiencia y Escala",
-                    description: "La base de nuestro liderazgo de mercado, optimizada para los segmentos de mayor demanda con procesos estandarizados y alta rotación.",
+                    description: "La base de nuestro liderazgo de mercado, optimizada para los segmentos de mayor demanda con procesos estandarizados y alta rotación",
                     projects: [
                         { name: "Townhouses", desc: "Soluciones familiares en comunidades seguras y bien ubicadas, ideales para la vida moderna.", segment: "Familia Joven, Clase Media",image: "1GPINvJo6VwkOQ2rWq38Bpzif1ED9T_27"},
                         { name: "Vertical Accesible", desc: "Apartamentos con diseño inteligente y amenidades completas, acercando la vida urbana a jóvenes profesionales.", segment: "Gen Z, Jóvenes Profesionales", image:"1HFm5JZF71f2griE5gc64mogQX_NZAj-R" },
@@ -417,7 +417,7 @@
                 },
                 expansion: {
                     title: "Motor de Expansión: Innovación y Nuevos Nichos",
-                    description: "Nuestra apuesta por el futuro: diversificación de productos, geografías y modelos de ingreso para capturar las tendencias emergentes.",
+                    description: "Nuestra apuesta por el futuro: diversificación de productos, geografías y modelos de ingreso para capturar las tendencias emergentes",
                     projects: [
                         { name: "Uso Mixto Ligero", desc: "Comunidades vibrantes que integran vivienda, comercio y servicios para un estilo de vida conectado.", segment: "Jóvenes Profesionales, Millenials",image:"1qGm0yHsm7qqDFpPVAHoAobbxIPzIDM3B" },
                         { name: "Build-to-Rent", desc: "Proyectos diseñados para el mercado de alquiler, generando ingresos recurrentes y estables.", segment: "Inversionistas, Institucionales",image:"1yGzMIh2VIiFOCMz2Gy5dZ086-mqGg-5u" },
@@ -719,3 +719,4 @@
 </body>
 
 </html>
+
