--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="container mx-auto px-6">
                  <div class="text-center mb-12">
                     <h2 class="text-4xl md:text-5xl font-bold">Cómo lo logramos: La Transformación</h2>
-                    <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Una evolución integral de nuestras capacidades para ejecutar a escala, con excelencia y agilidad.</p>
+                    <p class="mt-4 text-lg text-gray-600 max-w-3xl mx-auto">Una evolución integral de nuestras capacidades para ejecutar a escala, con excelencia y agilidad</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Digital Core -->
@@ -719,4 +719,5 @@
 </body>
 
 </html>
+
 
